@@ -18,7 +18,9 @@
 
 package org.apache.giraph.job;
 
+import org.apache.giraph.conf.FloatConfOption;
 import org.apache.giraph.worker.WorkerProgress;
+import org.apache.hadoop.conf.Configuration;
 
 import com.google.common.collect.Iterables;
 
@@ -34,7 +36,20 @@ import javax.annotation.concurrent.NotThreadSafe;
 public class CombinedWorkerProgress extends WorkerProgress {
   /** Decimal format which rounds numbers to two decimal places */
   public static final DecimalFormat DECIMAL_FORMAT = new DecimalFormat("#.##");
+  /**
+   * If free memory fraction on some worker goes below this value,
+   * warning will be printed
+   */
+  public static final FloatConfOption NORMAL_FREE_MEMORY_FRACTION =
+      new FloatConfOption("giraph.normalFreeMemoryFraction", 0.1f,
+          "If free memory fraction on some worker goes below this value, " +
+              "warning will be printed");
 
+  /**
+   * If free memory fraction on some worker goes below this value,
+   * warning will be printed
+   */
+  private double normalFreeMemoryFraction;
   /**
    * How many workers have reported that they are in highest reported
    * superstep
@@ -48,13 +63,18 @@ public class CombinedWorkerProgress extends WorkerProgress {
   private double minFreeMemoryMB = Double.MAX_VALUE;
   /** Name of the worker with min free memory */
   private int workerWithMinFreeMemory;
+  /** Minimum fraction of free memory on a worker */
+  private double minFreeMemoryFraction = Double.MAX_VALUE;
 
   /**
    * Constructor
    *
    * @param workerProgresses Worker progresses to combine
+   * @param conf Configuration
    */
-  public CombinedWorkerProgress(Iterable<WorkerProgress> workerProgresses) {
+  public CombinedWorkerProgress(Iterable<WorkerProgress> workerProgresses,
+      Configuration conf) {
+    normalFreeMemoryFraction = NORMAL_FREE_MEMORY_FRACTION.get(conf);
     for (WorkerProgress workerProgress : workerProgresses) {
       if (workerProgress.getCurrentSuperstep() > currentSuperstep) {
         verticesToCompute = 0;
@@ -94,6 +114,8 @@ public class CombinedWorkerProgress extends WorkerProgress {
         minFreeMemoryMB = workerProgress.getFreeMemoryMB();
         workerWithMinFreeMemory = workerProgress.getTaskId();
       }
+      minFreeMemoryFraction = Math.min(minFreeMemoryFraction,
+          workerProgress.getFreeMemoryFraction());
       freeMemoryMB += workerProgress.getFreeMemoryMB();
     }
     if (!Iterables.isEmpty(workerProgresses)) {
@@ -140,6 +162,9 @@ public class CombinedWorkerProgress extends WorkerProgress {
         workerWithMinFreeMemory).append(" - ").append(
         DECIMAL_FORMAT.format(minFreeMemoryMB)).append("MB, average ").append(
         DECIMAL_FORMAT.format(freeMemoryMB)).append("MB");
+    if (minFreeMemoryFraction < normalFreeMemoryFraction) {
+      sb.append(", ******* YOUR JOB IS RUNNING LOW ON MEMORY *******");
+    }
     return sb.toString();
   }
 }
